fix: rounded-full search input on iOS attempt
there is some default styling but only on iOS which is super annoying.
This commit attempts to fix this.

--- a/theme-src/src/theme-custom.css
+++ b/theme-src/src/theme-custom.css
@@ -1,6 +1,11 @@
 /* This file contains Tailwind styles applied to common tags
  * such as paragraphs, headings, links, etc. */
 
+/* remove rounded corners on webkit browsers */
+form, input[type=search] {
+  -webkit-appearance: none;
+}
+
 @screen md {
   section,
   .section {
